--- a/src/components/personal/per-2/index.pug
+++ b/src/components/personal/per-2/index.pug
@@ -1,411 +1,63 @@
-.product-catelory_list
-	h2.title.title_small.title_small-white Danh mục sản phẩm
-	#accordian
-		ul
-			li.active
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			li
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			li
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			li
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			li
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			li
-				.wrap-title
-					.content
-						a(href="") 
-							p Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-					.img 
-						img.desktop(src="./images/personal/pro-1.png", alt="")
-						img.mobile(src="./images/personal/pro-1.png", alt="")
-				ul 
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								.content
-									a(href="") 
-										p lv3
-									em.lnr.lnr-chevron-down
-								ul
-									li
-										a(href="") 
-											p Vay phát triển kinh tế gia đình
-											em.lnr.lnr-chevron-right
-									li
-										a(href="") 
-											p Vay bổ sung vốn lưu động
-											em.lnr.lnr-chevron-right
-									li
-										a(href="") 
-											p Vay bổ sung vốn lưu động
-											em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-					li
-						.content
-							a(href="") 
-								p Tiền gửi thanh toán
-							em.lnr.lnr-chevron-down
-						ul
-							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
-			
+section.section.featured-products
+	.container
+		h2.title.title_small.title_small-black Sản phẩm nổi bật
+		.list-product.d-flex.align-center
+			.list-product_item.animation 
+				a.d-flex.flex-column(href="") 
+					.list-product_item__img.animation_img 
+						img(src="./images/personal/pro-1.png", alt="")
+					.list-product_item__content.d-flex.flex-column 
+						.list-product_item__content--title 
+							p.lcl.lcl-2 Vay nông nghiệp
+						.list-product_item__content--desc 
+							p.lcl.lcl-2  Gửi và rút tiền mặt tiện lợi. Nhận chuyển khoản 24/7.
+						.btn-login 
+							p Nhận tiền ngay
+			.list-product_item.animation 
+				a.d-flex.flex-column(href="") 
+					.list-product_item__img.animation_img  
+						img(src="./images/personal/pro-2.png", alt="")
+					.list-product_item__content.d-flex.flex-column 
+						.list-product_item__content--title 
+							p.lcl.lcl-2 Vay bằng sổ tiết kiệm
+						.list-product_item__content--desc 
+							p.lcl.lcl-2  Gửi tiền và/hoặc rút tiền linh hoạt bất cứ lúc nào.
+						.btn-login 
+							p Nhận tiền ngay
+			.list-product_item.animation 
+				a.d-flex.flex-column(href="") 
+					.list-product_item__img.animation_img  
+						img(src="./images/personal/pro-3.png", alt="")
+					.list-product_item__content.d-flex.flex-column 
+						.list-product_item__content--title 
+							p.lcl.lcl-2 Vay kinh doanh
+						.list-product_item__content--desc 
+							p.lcl.lcl-2 Vay hỗ trợ vốn phát triển kinh tế gia đình trung dài hạn.
+						.btn-login 
+							p Nhận tiền ngay
+			.list-product_item.animation 
+				a.d-flex.flex-column(href="") 
+					.list-product_item__img.animation_img  
+						img(src="./images/personal/pro-4.png", alt="")
+					.list-product_item__content.d-flex.flex-column 
+						.list-product_item__content--title 
+							p.lcl.lcl-2 Vay cá nhân
+						.list-product_item__content--desc 
+							p.lcl.lcl-2  Vay tiêu dùng không cần tài sản đảm bảo chỉ trong 30p.
+						.btn-login 
+							p Nhận tiền ngay
+			.list-product_item.animation 
+				a.d-flex.flex-column(href="") 
+					.list-product_item__img.animation_img  
+						img(src="./images/personal/pro-5.png", alt="")
+					.list-product_item__content.d-flex.flex-column 
+						.list-product_item__content--title 
+							p.lcl.lcl-2 Vay mua ô tô
+						.list-product_item__content--desc 
+							p.lcl.lcl-2  Đáp ứng nhu cầu mua ô tô cho nhiều mục đích khác nhau. 
+						.btn-login 
+							p Nhận tiền ngay
+
+
+
+
