--- a/src/components/_core/button.sass
+++ b/src/components/_core/button.sass
@@ -71,24 +71,27 @@
 
 	&-login
 		position: relative
-		width: 176px
-		height: 58px
+		width: max-content
+		height: 40px
 		display: flex
 		align-items: center
+		justify-content: center
 		border-radius: 50px !important
 		border: none
-		background-color: $yellow !important
-		padding: 16px 24px 16px 24px !important
-		transition: all ease-in-out .5s
+		background-color: #ffd643
+		padding: 0 !important
+		transition: all ease-in-out 0.5s
 		span,
 		p
-			color: $black
+			margin-left: 0
+			color: #333
 			margin-bottom: 0
 			display: block
-			margin-left: 20px
-			font-size: r(18px)
+			font-size: 1rem
 			font-weight: 700
-			transition: all ease-in-out .5s
+			transition: all ease-in-out 0.5s
+			padding: 6.5px 50px
+			white-space: nowrap
 		&::after
 			position: absolute
 			top: 53%
@@ -102,7 +105,7 @@
 			transition: all ease-in-out .5s
 		@media screen and ( min-width: 1025px )
 			&:hover
-				background-color: $main !important
+				background-color: #F00020
 				span,
 				p
 					color: $white
