--- a/src/components/breakcrumb/breakcrumb.pug
+++ b/src/components/breakcrumb/breakcrumb.pug
@@ -1,7 +1,66 @@
-.breadcrumb-wrapper
-	.container
-		ul.breadcrumb
-			li
-				a(href='index.html') Trang chủ
-			li.active
-				a(href='promotion.html') Ưu đãi
+.menu-product-wrapper
+	.container 
+		.component-slider
+			button.caret.caret-left
+				.arrow-wrap
+					i.material-icons keyboard_arrow_left
+			.slider-container
+				ul.slider-content.d-flex.align-center
+					li.slider-content__item
+						a(href="")
+							p Sản phẩm tiền gửi
+						.menu-product-detail
+							.row 
+								.menu-product-detail__categories.col-sm-12.col-md-9.col-xl-9 
+									.row 
+										.menu-category.col-md-3.col-xl-3
+											a.link-title(href="") Tiền gửi thanh toán
+											.menu-category__content
+												ul 
+													li 
+														a(href="") Tiền gửi thanh toán 
+													li 
+														a(href="") Tiền gửi thanh toán ISMART 
+													li 
+														a(href="") TK TGTT chi lương
+											a.expand-button(href="")
+												p Xem thêm
+										.menu-category.col-md-3.col-xl-3
+											a.link-title(href="") Tiền gửi tiết kiệm
+											.menu-category__content
+												ul 
+													li 
+														a(href="") Tiết kiệm không kỳ hạn
+													li 
+														a(href="") Tiết kiệM lĩnh lãi cuối kỳ
+													li 
+														a(href="") Tiết kiệm lĩnh lãi định kỳ
+											a.expand-button(href="")
+												p Xem thêm
+								.menu-product-detail__featured.col-sm-12.col-md-3.col-xl-3
+									.item-featured
+										a(href="")
+											img(src="./images/featured.jpg", alt="") 
+									.item-featured_content 
+										a(href="")
+											p Cùng HDBank 'Vui tết sum vầy - Đong đầy tiền tỷ'
+										a.btn-login(href="")
+											p Xem ngay 
+					li.slider-content__item
+						a(href="")
+							p Sản phẩm vay
+					li.slider-content__item
+						a(href="")
+							p Thẻ
+					li.slider-content__item
+						a(href="")
+							p Ngân hàng điện tử
+					li.slider-content__item
+						a(href="")
+							p Bảo hiểm 
+					li.slider-content__item
+						a(href="")
+							p Sản phậm dịch vụ
+			button.caret.caret-right
+				.arrow-wrap
+					i.material-icons keyboard_arrow_right
