--- a/src/components/personal/per-2/style.sass
+++ b/src/components/personal/per-2/style.sass
@@ -1,89 +1,80 @@
-#accordian
-    ul
-        padding-left: 0
-        border-radius: 20px
-        ul
-            background: #FFFFFF
-            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.12)
-            padding-left: 0
-            display: none
-            ul
-                box-shadow: none
-    li
-        .wrap-title
-            position: relative
-            .content
-                position: absolute
-                bottom: 0
-                left: 0
-                width: 100%
-                padding: 8px 16px
-                background: linear-gradient(360deg, #000000 -3.93%, rgba(0, 0, 0, 0) 70.15%)
-                filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.12))
+.featured-products
+    .list-product
+        margin-left: -11px
+        margin-right: -11px
+        &_item
+            flex: 0 0 20%
+            width: 20%
+            padding: 0 11px
+            a
+                color: #333
                 border-radius: 12px
-                z-index: 2
-                display: flex
-                align-items: center
-                justify-content: space-between
-                a,
-                em
-                    color: $white
-                    font-weight: bold
-                    font-size: 20px
-                    line-height: 29px
-                    cursor: pointer
-                    transform: rotate(0deg)
-                    transition: all eas-in-out .3s
+                background: rgba(255, 255, 255, 0.94)
+                box-shadow: 1.21795px 1.21795px 6.08974px rgba(0, 0, 0, 0.07)
 
-            .img
-                +img-ratio(106/322)
-                transition: all ease-in-out .3s
+            &__img
+                +img-ratio(136/238)
                 img
-                    border-radius: 12px
-        ul
-            padding: 24px
-            li
-                .content
-                    display: flex
-                    align-items: center
-                    justify-content: space-between
-                    a,
-                    em
+                    border-top-left-radius: 12px
+                    border-top-right-radius: 12px
+            &__content
+                padding: 10px 16px
+                width: 100%
+                height: 157px
+                &--title
+                    p
                         font-weight: bold
-                        font-size: 16px
-                        line-height: 23px
-                        color: #333333
-                        cursor: pointer
-                        transform: rotate(0deg)
-                        transition: all eas-in-out .3s
-                &.active
-                    .content
-                        em
-                            transform: rotate(180deg)
-                ul
-                    padding: 0
-                    li
-                        margin-top: 0
-                        padding-top: 17px
-                        a
-                            display: flex
-                            align-items: center
-                            justify-content: space-between
-                            font-weight: normal
-                            font-size: 16px
-                            line-height: 23px
-                            color: #333333
-            li + li
-                padding-top: 17px
-                margin-top: 0
-        &.active>ul
-            display: block
-        &.active
-            .wrap-title
-                .img
-                    +img-ratio(58/322)
-                .content
-                    em
-                        transform: rotate(180deg)
-    li + li
-        margin-top: 8px
+                        font-size: 18px
+                &--desc
+                    p
+                        font-weight: normal
+                        font-size: 14px
+                .btn-login
+                    margin-top: auto
+                    margin-left: auto
+                    margin-right: auto
+        @media screen and ( max-width: 1440px )
+            &_item
+                &__content
+                    .btn-login
+                        p
+                            padding: 2.5px 40px
+        @media screen and ( max-width: 1280px )
+            &_item
+                &__content
+                    &--title
+                        p
+                            font-size: 1rem
+                    .btn-login
+                        p
+                            font-size: 14px
+                            padding: 2.5px 30px
+                        &::after
+                            display: none
+        @media screen and ( max-width: 1199.98px)
+            flex-direction: row
+            flex-wrap: wrap
+            &_item
+                flex: 0 0 auto
+                width: 25%
+                margin-bottom: 22px
+        @media screen and ( max-width: 992.98px)
+            &_item
+                width: 33.333333%
+        @media screen and ( max-width: 575.98px)
+            &_item
+                width: 50%
+                &__content
+                    padding: 8px
+                    height: 105px
+                    &--title
+                        p
+                            font-size: 10px
+                    &--desc
+                        p
+                            font-size: 9px
+                    .btn-login
+                        height: 32px
+                        p
+                            font-size: 10px
+                            padding: 2px 20px
