--- a/src/components/promotion/ads-list/style.sass
+++ b/src/components/promotion/ads-list/style.sass
@@ -18,6 +18,7 @@
 					border-radius: 21px
 					line-height: 23px
 					color: $black
+					white-space: nowrap
 	.promotion-item
 		background: rgba(255, 255, 255, 0.94)
 		box-shadow: 1.21795px 1.21795px 6.08974px rgba(0, 0, 0, 0.07)
@@ -59,7 +60,6 @@
 				box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
 				background-color: $yellow
 			.tab
-				width: 120%
 				justify-content: flex-start
 				&-item
 					&_link
@@ -72,9 +72,6 @@
 						p
 							font-size: r(14px)
 	@media screen and ( max-width: 575.98px )
-		.list-tabs
-			.tab
-				width: 200%
 		.promotion-item
 			&_content
 				padding: 8px
