--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -1,8 +1,7 @@
 section.section.card-hdbank(setBackground="./images/bg-1.jpg").reveal
 	.container
-		h2.title.title_small.title_small-white Thoải mái mua sắm cùng thẻ HDBank
-
-		.block-desktop
+		h2.title.title_small.title_small-white(data-aos="fade-up") Thoải mái mua sắm cùng thẻ HDBank
+		.block-desktop(data-aos="fade-up")
 			.slide-card
 				h3 Thẻ tín dụng HDBank
 				.swiper-container
@@ -57,4 +56,4 @@ section.section.card-hdbank(setBackground="./images/bg-1.jpg").reveal
 											p Mở thẻ
 				.swiper-button-next 
 				.swiper-button-prev
-		a.btn-view-all(href="") Xem tất cả thẻ
+		a.btn-view-all(href="" data-aos="fade-up") Xem tất cả thẻ
