--- a/src/components/home/h-1/h-1.pug
+++ b/src/components/home/h-1/h-1.pug
@@ -1,4 +1,4 @@
-section.section.product-hdbank.reveal
+section.section.product-hdbank(data-aos="fade-up")
 	.container 
 		h1.title.title_big  Các sản phẩm tại HDBank
 		ul#list.d-flex.align-center
