--- a/src/components/global/header/header.pug
+++ b/src/components/global/header/header.pug
@@ -10,7 +10,7 @@
 					
 				.logo
 					a(href="") 
-						img(src="./images/Logo.png", alt="")
+						img(src="./images/logo.svg", alt="")
 
 				.search-box
 					form.searchform(action="", method="post") 
@@ -38,7 +38,7 @@
 	header#nav-toggle
 		.nav-toggle 
 			a.logo(href="") 
-				img(src="./images/Logo.png", alt="")
+				img(src="./images/logo.svg", alt="")
 			.search-box
 				form(action="", method="post") 
 					.form-group
