--- a/src/components/global/footer/footer.pug
+++ b/src/components/global/footer/footer.pug
@@ -6,7 +6,7 @@ footer
 			.col-lg-3.col-sm-12
 				.infor-box
 					a.logo-footer(href="") 
-						img(src="./images/Logo.png", alt="")
+						img(src="./images/logo.svg", alt="")
 					ul
 						li 
 							img(src="./images/icons/location.svg", alt="")
