--- a/src/components/maintenance/maintenance/index.pug
+++ b/src/components/maintenance/maintenance/index.pug
@@ -1,9 +1,9 @@
-section.maintenance-section(setBackground='../images/404.png')
+section.maintenance-section
     .page-container 
         .logo 
-            img(src="./images/Logo.png", alt="")
+            img(src="./images/logo.png", alt="")
         .page-content 
-            .img(setBackground=('../images/maintenance.gif'))
+            .img
             .page-title 
                 h1 Website đang bảo trì
             .page-content 
